# RNN

./: CMakeLists.txt  main.cpp
include/: Client.hpp  DataProcessing.hpp  Layer.hpp  MathUtils.hpp  Network.hpp  Neuron.hpp  Utils.hpp
src/: Client.cpp  DataProcessing.cpp  Layer.cpp  MathUtils.cpp  Network.cpp  Neuron.cpp  Utils.cpp
